Fixed layout when viewing on mobile devices.

--- a/style/main.css
+++ b/style/main.css
@@ -223,6 +223,7 @@ ul{
     }
   }
 .space{
+  display:inline;
   position:absolute;
   width:400vw;
   height:400vh;
